tryingdevToGit/force-app/main/default/objects/Agent__c/fields/Agent_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Email__c</fullName>
    <label>Agent&#39;s Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>