tryingdevToGit/force-app/main/default/objects/Agent__c/fields/Agent_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Phone__c</fullName>
    <label>Agent&#39;s Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>