tryingdevToGit/force-app/main/default/objects/Agent__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North India</fullName>
            </value>
            <value>
                <fullName>South India</fullName>
            </value>
            <value>
                <fullName>East India</fullName>
            </value>
            <value>
                <fullName>West India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>